--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div align="center">
-    <h2>Users</h2>
-    <h3><a href="/new">New User</a></h3>
+    <h2>Users table</h2>
+    <h3><a href="/new">Add new user</a></h3>
     <table border="2" cellpadding="10">
         <tr>
             <th>ID</th>
@@ -22,8 +22,10 @@
             <td th:utext="${u.surname}"></td>
             <td th:utext="${u.email}"></td>
             <td>
-                <a th:href="@{/{id}/edit(id=${u.getId()})}">Edit</a>
-                <a th:href="@{/delete/{id}(id=${u.getId()})}">Delete</a>
+<!--                <a th:href="@{/{id}/edit(id=${u.getId()})}">Edit</a>-->
+<!--                <a th:href="@{/delete/{id}(id=${u.getId()})}">Delete</a>-->
+                <a th:href="'/update?id='+${u.id}">Edit</a>
+                <a th:href="'/delete?id='+${u.id}">Delete</a>
             </td>
         </tr>
     </table>
