--- a/src/webapp/WEB-INF/pages/new.html
+++ b/src/webapp/WEB-INF/pages/new.html
@@ -7,7 +7,7 @@
 <body>
 <div align="center">
     <h2>New User</h2>
-    <form th:action="@{/new}" th:object="${user}" method="POST">
+    <form method="POST" th:action="@{/new}" th:object="${user}">
         <fieldset style="width: 300px;">
             <p>
                 <label th:for="firstName">Name: </label>
